demo/monolith/k8s/redis-rendered/redis-cluster/templates/headless-svc.yaml
---
# Source: redis-cluster/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-headless
  namespace: "default"
  labels:
    app.kubernetes.io/instance: redis-cluster
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis-cluster
    app.kubernetes.io/version: 8.0.3
    helm.sh/chart: redis-cluster-12.0.13
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: tcp-redis
    - name: tcp-redis-bus
      port: 16379
      targetPort: tcp-redis-bus
  selector:
    app.kubernetes.io/instance: redis-cluster
    app.kubernetes.io/name: redis-cluster
