demo/monolith/k8s/redis-rendered/redis-cluster/templates/redis-svc.yaml
---
# Source: redis-cluster/templates/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith-redis
  namespace: "default"
  labels:
    app.kubernetes.io/instance: redis-cluster
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis-cluster
    app.kubernetes.io/version: 8.0.3
    helm.sh/chart: redis-cluster-12.0.13
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: tcp-redis
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/instance: redis-cluster
    app.kubernetes.io/name: redis-cluster
