demo/monolith/k8s/redis-rendered/redis-cluster/templates/networkpolicy.yaml
---
# Source: redis-cluster/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-cluster
  namespace: "default"
  labels:
    app.kubernetes.io/instance: redis-cluster
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis-cluster
    app.kubernetes.io/version: 8.0.3
    helm.sh/chart: redis-cluster-12.0.13
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: redis-cluster
      app.kubernetes.io/name: redis-cluster
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 6379
        - port: 16379
